Name tag design. Add about & resume routes.

--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,9 +1,9 @@
 <div class="nametag">
   <div class="tag-header">
-    <h1>Hello</h1>
-    <h3>my name is</h3>
+    <h1>Resume</h1>
+    <!-- <h3>me</h3> -->
   </div>
   <div class="tag-footer">
-    <h1>Kelley Stephens</h1>
+    <h1>...</h1>
   </div>
 </div>
