--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url(https://fonts.googleapis.com/css?family=Over+the+Rainbow);
+ @import url(https://fonts.googleapis.com/css?family=Raleway:300);
+
+ body {
+     background-image: url('paint-sky.jpg');
+ }
