--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,12 +1,8 @@
-<div class="nametag">
-  <div class="tag-header">
-    <h1>About</h1>
-    <!-- <h3>me</h3> -->
-  </div>
-  <div class="tag-footer">
-    <h2>MTSU graduate with a degree in Marketing and Spanish. In 2014 I decided to
-    switch paths and attend the Nashville Software School where I learned Javascript
-    and Ruby on Rails, along with much more! My wonderful husband and I just recently
-    had our first daughter, Annabelle, and are loving the journey of parenthood.</h2>
-  </div>
-</div>
+<h1 class="about">About</h1>
+
+<!-- <h1>
+  MTSU graduate with a degree in Marketing and Spanish. In 2014 I decided to
+  switch paths and attend the Nashville Software School where I learned Javascript
+  and Ruby on Rails, along with much more! My wonderful husband and I just recently
+  had our first daughter, Annabelle, and are loving the journey of parenthood.
+</h1> -->
