--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,5 @@
-<div class="nametag">
-  <div class="tag-header">
-    <h1>Hello</h1>
-    <h3>my name is</h3>
-  </div>
-  <div class="tag-footer">
-    <h1>Kelley Stephens</h1>
-  </div>
+<div class="holder">
+  <div class="name">Kelley Stephens</div>
+  <div class="line"></div>
+  <div class="title">Software Engineer</div>
 </div>
