--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,9 +1,1 @@
-<div class="nametag">
-  <div class="tag-header">
-    <h1>Resume</h1>
-    <!-- <h3>me</h3> -->
-  </div>
-  <div class="tag-footer">
-    <h1>...</h1>
-  </div>
-</div>
+<h1 class="resume">Resume</h1>
