--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Over+the+Rainbow);
+@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+
 // Index
 .holder {
   width: 60%;
