Fix for google fonts

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Over+the+Rainbow);
-@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+@import url('//fonts.googleapis.com/css?family=Over+the+Rainbow');
+@import url('//fonts.googleapis.com/css?family=Raleway:300');
 
 // Index
 .holder {
