--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 <body>
 <%= render "layouts/nav" %>
 <%= yield %>
+<!-- <a href="http://www.freepik.com/free-vector/abstract-background-of-paint_897445.htm">Designed by Freepik</a> -->
 
 </body>
 </html>
