--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@
   width: 60%;
   margin: auto;
   padding-top: 15%;
-  @media (max-width: 934px) {
+  @media only screen and (max-width: 934px) {
     width: 90%;
   }
 }
