--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,17 @@
-<h1 class="about">About</h1>
-
-<!-- <h1>
-  MTSU graduate with a degree in Marketing and Spanish. In 2014 I decided to
-  switch paths and attend the Nashville Software School where I learned Javascript
-  and Ruby on Rails, along with much more! My wonderful husband and I just recently
-  had our first daughter, Annabelle, and are loving the journey of parenthood.
-</h1> -->
+<div class="holder low-padding">
+  <div class="name">About</div>
+  <div class="line"></div>
+  <div class="title justify">
+    I am one of the few native Nashvillians, born and raised in the Music City.
+    I attended Middle Tennessee State University, where I graduated with a Bachelors of Business
+    Administration in Marketing and a Bachelors of Arts in Spanish. After working many years in
+    marketing/operational type positions, I found myself feeling bored and unchallenged.
+    This led to my decision to quit my job and apply for the fifth cohort at the Nashville
+    Software School. After six intensive months learning Javascript and Ruby on Rails, I graduated
+    from the bootcamp and was hired by Ingram Content Group as their first Ruby on Rails Software
+    Engineer on the Business Intelligence Team. In the almost two years since I joined the team,
+    I have been a part of many different projects and have worked in all areas of these from the
+    servers to the web development. I love working with both front and back end technologies, as
+    well as the UI/UX and design side of the applications. I'd love to hear from you and get connected! 
+  </div>
+</div>
