--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,1 +1,16 @@
-<h1 class="contact">Contact</h1>
+<div class="holder low-padding">
+  <div class="name">Contact</div>
+  <div class="line"></div>
+  <div class="title">
+    <%= mail_to 'kelley@kelleystephens.com', 'Email' %>
+  </div>
+  <div class="title">
+    <a href="https://www.linkedin.com/in/kelleystephens" target="_blank">Github</a>
+  </div>
+  <div class="title">
+    <a href="https://www.linkedin.com/in/kelleystephens" target="_blank">LinkedIn</a>
+  </div>
+  <div class="title">
+    <a href="https://www.twitter.com/kelleycan" target="_blank">Twitter</a>
+  </div>
+</div>
