--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,7 @@
   <div class="line"></div>
   <div class="title">Software Engineer</div>
 </div>
+
+<a href="http://www.freepik.com/free-vector/abstract-background-of-paint_897445.htm" class="bkgd-credit">
+  Designed by Freepik
+</a>
