Fix link to Github

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -5,7 +5,7 @@
     <%= mail_to 'kelley@kelleystephens.com', 'Email' %>
   </div>
   <div class="title">
-    <a href="https://www.linkedin.com/in/kelleystephens" target="_blank">Github</a>
+    <a href="https://www.github.com/kelleystephens" target="_blank">Github</a>
   </div>
   <div class="title">
     <a href="https://www.linkedin.com/in/kelleystephens" target="_blank">LinkedIn</a>
